# Injective-Analytic-API-

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/models/: __init__.py  analytics.py  market.py  ninja.py  premium.py  supply.py  wallet.py
app/routers/: __init__.py  analytics.py  health.py  markets.py  ninja.py  premium.py  supply.py  wallet.py
app/services/: __init__.py  analytics_service.py  injective_client.py  market_service.py  ninja_service.py  supply_service.py  wallet_service.py
app/utils/: auth.py  cache.py
examples/: usage_demo.py
tests/: conftest.py  test_analytics.py  test_health.py  test_markets.py  test_markets_mock.py  test_ninja.py  test_wallet.py
